.omo/evidence/controller-webhook-split-deployment/combined/live-combined-20260727250000/admission-mutating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T15:29:11Z"
  generation: 1
  name: echo-operator.echo-smoke-combined-live-combined-20260727250000.echo.example.com
  resourceVersion: "2230128"
  uid: cae23bb8-5c96-4f97-90d6-2a1dfa10c525
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlekNDQW1PZ0F3SUJBZ0lVU3Q5azV3MklPTEk5NUtEZG0xSGhaWDhXT25jd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1ZERlNNRkFHQTFVRUF3eEpaV05vYnkxemJXOXJaUzFqYjIxaWFXNWxaQzFzYVhabExXTnZiV0pwYm1WawpMVEl3TWpZd056STNNalV3TURBd0xXVmphRzh0YjNCbGNtRjBiM0lnZDJWaWFHOXZheUJEUVRBZUZ3MHlOakEzCk1qY3hOVEk1TURsYUZ3MHlOekEzTWpjeE5USTVNRGxhTUZReFVqQlFCZ05WQkFNTVNXVmphRzh0YzIxdmEyVXQKWTI5dFltbHVaV1F0YkdsMlpTMWpiMjFpYVc1bFpDMHlNREkyTURjeU56STFNREF3TUMxbFkyaHZMVzl3WlhKaApkRzl5SUhkbFltaH [...]
    service:
      name: echo-smoke-combined-live-combined-20260727250000-echo-operator
      namespace: echo-smoke-combined-live-combined-20260727250000
      path: /mutate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-combined-live-combined-20260727250000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
